--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-	"connect": "*"
+	"connect": "*",
+	"winston": "*"
   },
   "repository": "",
   "author": "Sudheer",
