[Server]: Refactored DAO implementation.
[Server]: From now on do start MongoDB to get your app server running.
[Server]: Removed few unnecessary closure scopes.
[Server]: We are going to use "mongojs" module for connection MongoDB.
[Client]: Modified LoginPresenter to just read data from MongoDB.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
 	"connect": "*",
-	"winston": "*"
+	"winston": "*",
+	"mongojs": "*"
   },
   "repository": "",
   "author": "Sudheer",
