Revert "[Server]: Refactored DAO implementation."
This reverts commit 75799669e696024c0b5e3ab1c8caa1b322980017.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
 	"connect": "*",
-	"winston": "*",
-	"mongojs": "*"
+	"winston": "*"
   },
   "repository": "",
   "author": "Sudheer",
